--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,33 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@layer base {
+    html {
+      font-family: Poppins, system-ui, sans-serif;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+      
+    }
+    
   }
-  body {
-    color: white;
-    background: black;
-  }
+@layer components {
+    .heroButton {
+        @apply px-6 py-2 border border-[#242424] rounded-full uppercase text-xs text-gray-500 transition-all
+        tracking-widest hover:border-[#F7AB0A]/40 hover:text-[#F7AB0A]/40
+    }
+    .sectionContainer {
+        @apply flex flex-col relative h-screen 
+        text-center md:text-left md:flex-row px-0
+        max-w-full justify-evenly mx-auto items-center 
+    }
+    .sectionTitle {
+        @apply absolute top-24 uppercase tracking-[20px] text-gray-500 text-2xl
+    }
+
+    .contactInput {
+        @apply outline-none bg-slate-400/10 border-b px-6 py-4 border-[#242424]
+        text-gray-500 placeholder-gray-500 transition-all focus:border-[#F7AB0A] focus:text-[#F7AB0A]
+        hover:border-[#F7AB0A]/40 hover:text-[#F7AB0A]/40    
+    }
 }
+
